trying to get correct spacing for links

--- a/index.css
+++ b/index.css
@@ -366,7 +366,7 @@
   font-size: 1.2em;
   font-weight: bold;
   letter-spacing: 0.02em;
-  width: 25em;
+  width: 22em;
 }
 
 .links-to-code > a:hover {
